# jamduna

./: .gitignore  .gitmodules  Builder_Network.md  DOCKER.md  Dockerfile  FFI.md  LICENSE  Makefile  PLAN-root-first-state.md  README.md  ROLLUP.md  RPC-ROLLUP.md  SUBMODULES.md  TRACE_GUIDE.md  algotest  chainspecs.json  coverage.html  da.go  docker-compose.yml  genesis.json  go.mod  go.sum  hosts-dot.txt  hosts.txt  instrs.yaml  jam.go  jamt.sh  jamtest  polkajam_updater.sh  sequence.json  setup_env.sh  static-compile.sh  tiny.json  traces-jamduna-logs.sh
bandersnatch/: Cargo.toml  README.md  bandersnatch.go  bandersnatch.h  bandersnatch_benchmark_test.go  bandersnatch_const.go  bandersnatch_test.go  t
bandersnatch/src/: lib.rs
builder/orchard/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs  orchard_refine_test.go  p2sh_parity_check.go
builder/orchard/docs/: FFI.md  LIGHTCLIENT.md  NU7.md  ORCHARD.md  RPC.md  SERVICE-TESTING.md  SURPLUS.md  TRANSFERS.md  WALLET.md
builder/orchard/ffi/: Cargo.toml  Makefile  liborchard_ffi.dylib  orchard_ffi.h  sinsemilla.go  sinsemilla_test.go
builder/orchard/merkle/: README.md  merkle.go  merkle_interface.go  merkle_test.go
builder/orchard/rpc/: README.md  bitcoin_script.go  bitcoin_script_opcodes.go  bitcoin_script_real_test.go  bitcoin_script_test.go  blake2b_personal.go  handler.go  rollup.go  server.go  transparent_consensus.go  transparent_p2sh_test.go  transparent_parser_v5.go  transparent_script_parity_test.go  transparent_tx.go  transparent_tx_index_test.go  transparent_utxo_tree.go  txpool.go  txpool_test.go  wallet.go  workpackage.go  workpackage_integration_test.go  zcash_rpc.go
builder/orchard/shielded/: shielded_store.go  shielded_store_test.go
builder/orchard/src/: bundle_codec.rs  ffi.rs  lib.rs  merkle.rs  merkle_impl.rs  sequence.rs  sinsemilla_merkle.rs  state.rs  transparent_script.rs  witness.rs  witness_based.rs  workpackage.rs
builder/orchard/state/: cache.go
builder/orchard/tests/: transparent_testvectors.rs
builder/orchard/transparent/: scanner.go  scanner_test.go  snapshot.go  snapshot_test.go  transparent_store.go  transparent_store_test.go
builder/orchard/wallet/: manager.go  rpc_client.go  traffic.go  wallet.go
builder/orchard/witness/: README.md  builder.go  builder_wallet_test.go  commitment.go  ffi.go  ffi_test.go  host_stub.go  poseidon.go  pvm_test.go  test_blocks_ffi.go  wallet.go
builder/orchard/work_packages/: package_000.json  package_000_new.json
builder/orchard/zcash-orchard/: Cargo.toml
cambrian-accumulator/librsa_cuda/: CMakeLists.txt  README.md  rsa_cuda_cgbn.cu
erasurecoding/tools/test_vectors/: Cargo.toml
evm/: Cargo.toml
evm/src/: lib.rs
halo2/halo2_gadgets/: Cargo.toml
halo2/halo2_gadgets/src/: ecc.rs  lib.rs  poseidon.rs  sinsemilla.rs  utilities.rs
halo2/halo2_poseidon/: Cargo.toml
services/algo/: Cargo.toml
services/algo/src/: main.rs  main.rs.bak
services/algo_classic/: Cargo.toml
services/algo_classic/src/: main.rs
services/auth_copy/: Cargo.toml
services/auth_copy/src/: main.rs
services/bootstrap/: Cargo.toml  bootstrap.txt  main.rs
services/bootstrap/src/: main.rs
services/crates/polkavm-zygote/: Cargo.toml
services/doom/: Cargo.toml
services/doom/src/: main.rs
services/evm/: AGENTS.md  CLAUDE.md  Cargo.toml  go.mod  go.sum
services/evm/contracts/: Makefile  Math.abi  Math.sol  MathLib.bin-runtime  Shield.bin-runtime  USDM.abi  USDM.bin-runtime  auction.sol  gov.sol  math-runtime.evmhex  shield-runtime.bin.hex  shield.sol  usdm-runtime.bin.fixed  usdm-runtime.evmhex  usdm.evmhex  usdm.sol
services/evm/docs/: AUTH.md  BACKEND.md  BAL.md  BLOCKS.md  BTCETH.md  CALLS.md  CC-SPENDAUTH.md  DA-STORAGE.md  DEPENDENCY-TRACKING.md  ENTITIES.md  ETHEREUM.md  EXECUTIONEFFECTS.md  GATEWAY.md  HOT-KEYS.md  JAM-GAS.md  LIGHTCLIENT.md  MMR.md  OPTIMISTIC-FUNDING.md  PERPS.md  PRIVATE-VOTING.md  PROOFS.md  REWARDS.md  RPC.md  SHARDING.md  STABLECOINS-CORES.md  STAKING-INTEGRATION.md  UBT-CODEX.md  VALIDATORS.md  VERKLE.md  VERKLE3.md
services/evm/src/: accumulator.rs  backend.rs  block.rs  block_access_list.rs  bmt.rs  contractsharding.rs  da.rs  genesis.rs  jam_gas.rs  lib.rs  main.rs  meta_sharding.rs  mmr.rs  receipt.rs  refiner.rs  sharding.rs  state.rs  tx.rs  ubt.rs  ubt_constants.rs  ubt_host.rs  verkle.rs  verkle_constants.rs  verkle_proof.rs  witness_events.rs  writes.rs
services/evm/tests/: cross_verification_test.rs  ipa_config_test.rs  ipa_verify_test.rs  srs_compat_test.rs  verkle_absence_extraction_test.rs  verkle_compat_test.rs  verkle_deep_tree_test.rs  verkle_multiproof_stress_test.rs  verkle_multiproof_test.rs  verkle_negative_tests.rs  verkle_proof_of_absence_test.rs  verkle_witness_file_test.rs
services/null_authorizer/: Cargo.toml
services/null_authorizer/src/: main.rs
services/orchard/: Cargo.toml  NU7_DEPENDENCIES.md  NU7_IMPLEMENTATION_PLAN.md  PERSISTENCE_PLAN.md
services/orchard/keys/: orchard.vk  orchard_zsa.vk
services/orchard/src/: accumulator.rs  bundle_codec.rs  bundle_parser.rs  compactblock.rs  compacttx.rs  crypto.rs  errors.rs  ffi.rs  lib.rs  main.rs  nu7_types.rs  objects.rs  refiner.rs  signature_verifier.rs  sinsemilla_nostd.rs  state.rs  test_utils.rs  transparent_parser.rs  transparent_script.rs  transparent_utxo.rs  transparent_verify.rs  vk_registry.rs  witness.rs
services/orchard/tests/: halo2_proof_tests.rs  integration_tests.rs  nu7_e2e_flows.rs  (+12 more)
services/railgun/: Cargo.toml  RAILGUN.md
sp1/verifier/: Cargo.toml
zcash-web-wallet/: .gitignore  .prettierignore  .prettierrc  .taplo.toml  CHANGELOG.md  CHECKSUMS.json  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE.md  derive_address.go  package-lock.json  package.json  playwright.config.js  rust-toolchain.toml  verify_addresses.sh
zcash-web-wallet/.github/: dependabot.yml
zcash-web-wallet/cli/: Cargo.toml
zcash-web-wallet/core/: Cargo.toml
zcash-web-wallet/frontend/: index.html  integrity-check.js
zcash-web-wallet/scripts/: generate-checksums.cjs  verify-checksums.cjs
zcash-web-wallet/wasm-module/: Cargo.toml
(+2445 files in other folders)
