[package]
name = "bandersnatch"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec-vrfs ={ git = "https://github.com/davxy/ark-ec-vrfs", rev = "d90e180", default-features = false, features = ["bandersnatch", "ring", "parallel", "test-vectors"] }
hex = "0.4.3"
rand = "0.8"

[lib]
crate-type = ["staticlib"]
