[package]
name = "bandersnatch"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-vrf ={ version = "0.1.0", features = ["bandersnatch", "ring"] }
hex = "0.4.3"
rand = "0.8"

[lib]
crate-type = ["staticlib"]

[features]
default = []       
tiny = []         
small = []         
medium = []     
large = []     
2xlarge = []     
3xlarge = []     
full = []    