[workspace]
resolver = "2"
members = ["core", "wasm-module", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/LeakIX/zcash-web-wallet"

[workspace.dependencies]
# HTML builder
html-bootstrap = { git = "https://github.com/LeakIX/html-builder.git", package = "html-bootstrap" }
html-builder = { git = "https://github.com/LeakIX/html-builder.git", package = "html-builder", features = ["macros"] }
html-elements = { git = "https://github.com/LeakIX/html-builder.git", package = "html-elements" }


# Zcash crates
orchard = { path = "../orchard", default-features = false }
sapling-crypto = { version = "0.5", default-features = false }
zcash_address = { path = "../librustzcash/components/zcash_address" }
zcash_encoding = { path = "../librustzcash/components/zcash_encoding", default-features = false }
zcash_keys = { path = "../librustzcash/zcash_keys", default-features = false }
zcash_note_encryption = "0.4.1"
zcash_primitives = { path = "../librustzcash/zcash_primitives", default-features = false }
zcash_protocol = { path = "../librustzcash/components/zcash_protocol", default-features = false }
zcash_transparent = { path = "../librustzcash/zcash_transparent", default-features = false }
zip32 = "0.2"

# Serialization
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
bech32 = "0.11"
bip39 = "2.1"
blake2b_simd = { version = "1.0", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "schnorr"] }
pasta_curves = { path = "../pasta_curves/pasta_curves", default-features = false, features = ["alloc", "bits", "sqrt-table"] }
rand = "0.8"
secp256k1 = "0.29"
sinsemilla = { version = "0.1", default-features = false }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

[patch.crates-io]
orchard = { path = "../orchard" }
pasta_curves = { path = "../pasta_curves/pasta_curves" }
sapling-crypto = { git = "https://github.com/QED-it/sapling-crypto", rev = "9393f93fe547d1b3738c9f4618c0f8a2fffed29f" }
sinsemilla = { git = "https://github.com/zcash/sinsemilla", rev = "aabb707e862bc3d7b803c77d14e5a771bcee3e8c" }
zcash_note_encryption = { git = "https://github.com/zcash/zcash_note_encryption", rev = "9f7e93d42cef839d02b9d75918117941d453f8cb" }
halo2_gadgets = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
halo2_proofs = { git = "https://github.com/zcash/halo2", rev = "2308caf68c48c02468b66cfc452dad54e355e32f" }
