[package]
name = "orchard-builder"
version = "0.1.0"
edition = "2021"
authors = ["JAM Team"]
description = "Pure Rust JAM work package builder for Orchard service"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Orchard crate (local clone for development)
orchard = { path = "./zcash-orchard", default-features = false, features = ["circuit", "std"] }

# Cryptographic primitives
halo2_proofs = "0.3"
pasta_curves = "0.5"
blake2b_simd = "1"
rand = "0.8"
hex = "0.4"
incrementalmerkletree = "0.8.1"
nonempty = { version = "0.11", default-features = false }
subtle = { version = "2.6", default-features = false }

# Script interpreter dependencies
sha2 = "0.10"
ripemd = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_bytes = "0.11"
base64 = "0.22.1"
bincode = "1.3"

# FFI support (optional, for Go integration)
libc = { version = "0.2", optional = true }

[patch.crates-io]
halo2_proofs = { path = "../../halo2/halo2_proofs" }
halo2_gadgets = { path = "../../halo2/halo2_gadgets" }
pasta_curves = { path = "../../pasta_curves/pasta_curves" }

[[bin]]
name = "orchard-keygen"
path = "src/bin/orchard_keygen.rs"

[[bin]]
name = "orchard-builder"
path = "src/bin/orchard_builder.rs"

[features]
default = ["std", "circuit"]
std = []
ffi = ["libc"]
circuit = ["orchard/circuit"]

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
