[package]
name = "halo2_gadgets"
version = "0.4.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Emma Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.60"
description = "Reusable gadgets and chip implementations for Halo 2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zcash", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
ff = { version = "0.13", default-features = false, features = ["alloc"] }
group = { version = "0.13", default-features = false, features = ["alloc"] }
halo2_poseidon = { version = "0.1", path = "../halo2_poseidon", default-features = false }
halo2_proofs = { version = "0.3", path = "../halo2_proofs", default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
lazy_static = { version = "1", default-features = false, features = ["spin_no_std"] }
pasta_curves = { path = "../../pasta_curves/pasta_curves", default-features = false, features = ["alloc", "bits", "sqrt-table"] }
proptest = { version = "1.0.0", optional = true }
rand = { version = "0.8", default-features = false, features = ["alloc"] }
sinsemilla = { version = "0.1", default-features = false }
subtle = { version = "2.3", default-features = false }
uint = { version = "0.9.2", default-features = false } # MSRV 1.56.1

# Developer tooling dependencies
plotters = { version = "0.3.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3"
halo2_poseidon = { version = "0.1", path = "../halo2_poseidon", default-features = false, features = ["test-dependencies"] }
proptest = "1.0.0"
sinsemilla = { version = "0.1", features = ["test-dependencies"] }

[target.'cfg(unix)'.dev-dependencies]
inferno = ">=0.11, <0.11.5" # MSRV 1.59
pprof = { version = "0.8", features = ["criterion", "flamegraph"] } # MSRV 1.56

[lib]
bench = false

[features]
default = ["std"]
std = []
test-dev-graph = [
    "halo2_proofs/dev-graph",
    "plotters",
    "plotters/bitmap_backend",
    "plotters/bitmap_encoder",
    "plotters/ttf",
]
test-dependencies = [
    "proptest",
    "sinsemilla/test-dependencies",
]

# In-development features
# See https://zcash.github.io/halo2/dev/features.html
beta = [
    "halo2_proofs/beta",
]
nightly = [
    "beta",
    "halo2_proofs/nightly",
    "unstable-sha256-gadget",
]
unstable-sha256-gadget = []
# Add flags for in-development features above this line.

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "poseidon"
harness = false

[[bench]]
name = "sha256"
harness = false
required-features = ["unstable-sha256-gadget"]
