[package]
name = "halo2_poseidon"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Emma Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai",
]
edition = "2021"
rust-version = "1.60"
description = "The Poseidon algebraic hash function for Halo 2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
readme = "README.md"
categories = ["cryptography"]

[dependencies]
bitvec = { version = "1", default-features = false }
ff = { version = "0.13", default-features = false, features = ["alloc"] }
group = { version = "0.13", default-features = false, features = ["alloc"] }
pasta_curves = { path = "../../pasta_curves/pasta_curves", default-features = false, features = ["alloc", "bits", "sqrt-table"] }

[features]
test-dependencies = []
