cargo-features = ["edition2024"]

[package]
name = "algo_classic"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "algo_classic"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
utils = { path = "../utils" }
evm = { path = "../evm" }
hashbrown = "0.12"
primitive-types = { version = "0.12", default-features = false, features = ["impl-serde"] }