
[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
utils = { path = "../utils" }
primitive-types = { version = "0.12", default-features = false, features = ["impl-serde"] }