
[package]
name = "evm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "evm_service"
path = "src/lib.rs"

[[bin]]
name = "evm"
path = "src/main.rs"

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
utils = { path = "../utils" }
primitive-types = { version = "0.12", default-features = false }
evm = { path = "../vendor/evm", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["static-context"] }
# Verkle tree proof verification (crate-crypto rust-verkle)
# Temporarily disabled due to compilation issues - using Go FFI for now
# verkle-trie = { git = "https://github.com/crate-crypto/rust-verkle" }
# ipa-multipoint = { git = "https://github.com/crate-crypto/rust-verkle" }
# banderwagon = { git = "https://github.com/crate-crypto/rust-verkle" }

[features]
default = []
# Enable dual BAL hash verification: cross-check Rust vs Go BAL computation
dual-bal-verify = []
# Enable dual verkle verification: cross-check Rust vs Go verkle proofs
dual-verkle-verify = []
# Enable all dual verification modes
dual-verify-all = ["dual-bal-verify", "dual-verkle-verify"]