[package]
name = "orchard"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
panic = "unwind"  # FFI requires unwinding panic mode

[profile.dev]
panic = "unwind"  # FFI requires unwinding panic mode

# Create self-contained dynamic library without Rust std dependency
[target.x86_64-apple-darwin]
rustflags = ["-C", "prefer-dynamic=no"]

[lib]
name = "orchard_service"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "orchard"
path = "src/main.rs"

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
utils = { path = "../utils" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
nonempty = { version = "0.11", default-features = false }
subtle = { version = "2.6", default-features = false }
incrementalmerkletree = { version = "0.8.2", default-features = false }

# ZK proof verification (arkworks for Groth16)
ark-groth16 = { version = "0.4", default-features = false, optional = true }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"], optional = true }
ark-ec = { version = "0.4", default-features = false, optional = true }
ark-ff = { version = "0.4", default-features = false, optional = true }
ark-serialize = { version = "0.4", default-features = false, optional = true }
ark-std = { version = "0.4", default-features = false, optional = true }

# Blake2 for hashing (no_std compatible)
blake2 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std"], optional = true }

# Serde for serialization (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
serde_cbor = { version = "0.11", default-features = false, features = ["std", "alloc"] }

# Zcash Orchard for production bundle verification
orchard = { path = "../../builder/orchard/zcash-orchard", default-features = false, features = ["circuit", "std"], optional = true }

# Halo2 dependencies (Orchard uses these internally)
halo2_proofs = { version = "0.3", default-features = false }
halo2_gadgets = { version = "0.4", default-features = false }
pasta_curves = { version = "0.5", default-features = false }

[features]
default = []
ffi = []
polkavm = []
std = []
orchard = ["std", "dep:orchard", "dep:rand"]
groth16 = [
    "ark-groth16",
    "ark-bn254",
    "ark-ec",
    "ark-ff",
    "ark-serialize",
    "ark-std",
]

[dev-dependencies]
rand = "0.8"
ff = "0.13"
serde_json = "1.0"
