[package]
name = "sp1-verifier"
description = "Verifier for SP1 Groth16 and Plonk proofs."
readme = "README.md"
version = "3.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/succinctlabs/sp1"
keywords = ["sp1", "succinct", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[dependencies]
bn = { version = "0.6.0", package = "substrate-bn-succinct" }
sha2 = { version = "0.10.8", default-features = false }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false }


[features]
default = ["std"]
std = ["thiserror-no-std/std"]


