[package]
name = "zcash-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for generating Zcash testnet wallets"

[[bin]]
name = "zcash-wallet"
path = "src/main.rs"

[dependencies]
# Core library
zcash-wallet-core = { path = "../core" }

# Zcash crates
orchard = { workspace = true, features = ["std"] }
sapling-crypto = { workspace = true, features = ["std"] }
zcash_address.workspace = true
zcash_keys = { workspace = true, features = ["std", "orchard", "sapling", "transparent-inputs"] }
zcash_primitives.workspace = true
zcash_protocol.workspace = true
zcash_transparent.workspace = true
zip32.workspace = true

# CLI
clap.workspace = true

# Crypto
bip39.workspace = true
rand.workspace = true

# Serialization
hex.workspace = true
serde.workspace = true
serde_json.workspace = true

# HTTP client for RPC
reqwest.workspace = true

# Database
rusqlite.workspace = true

# Note encryption/decryption
zcash_note_encryption.workspace = true

# Other
bech32.workspace = true
