[package]
name = "orchard_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
orchard = { path = "../zcash-orchard", default-features = false, features = ["std"] }
incrementalmerkletree = "0.8.1"

[patch.crates-io]
pasta_curves = { path = "../../../pasta_curves/pasta_curves" }

