[package]
name = "arithmetic-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
utils = { path = "../../utils" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = 0
